ApexTrailhead/force-app/main/default/objects/Unit__c/fields/Challenge_Type__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Type__c</fullName>
    <label>Challenge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>