ApexTrailhead/force-app/main/default/objects/Unit__c/fields/Point__c.field-meta.xml
<CustomField>
    <fullName>Point__c</fullName>
    <label>Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>