ApexTrailhead/force-app/main/default/objects/Unit__c/fields/TimeEstimate__c.field-meta.xml
<CustomField>
    <fullName>TimeEstimate__c</fullName>
    <label>Time Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>